[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["lyaguxafrog <maccree.a@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
