[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["lyaguxafrog <maccree.a@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"